--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,14 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
     "lucide-react": "^0.525.0",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.58.1",
+    "react-icons": "^5.5.0",
     "react-resizable": "^3.0.5",
-    "react-router-dom": "^7.1.5"
+    "react-router-dom": "^7.1.5",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
