--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.525.0",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
