--- a/Backend/package.json
+++ b/Backend/package.json
@@ -8,12 +8,8 @@
   },
   "scripts": {
     "test": "jest",
-<<<<<<< HEAD
-    "dev": "nodemon src/server.js",
-=======
     "dev": "npx prisma generate && npx prisma db push && nodemon src/server.js",
     "dev:db": "npx prisma generate && npx prisma db push",
->>>>>>> update_last_changes
     "lint": "eslint src/**/*.{js}",
     "format": "prettier --write src/**/*.{js,json,md}",
     "prepare": "husky install"
@@ -25,18 +21,13 @@
     "@prisma/client": "^6.9.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
-<<<<<<< HEAD
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-=======
     "dayjs": "^1.11.18",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "path": "^0.12.7",
->>>>>>> update_last_changes
     "prisma": "^6.9.0"
   },
   "devDependencies": {
@@ -50,14 +41,10 @@
     "prettier": "^3.5.3",
     "supertest": "^7.1.1"
   },
-<<<<<<< HEAD
-  "lint-staged": "{\r\n    src/**/*.{js}: eslint"
-=======
   "lint-staged": {
     "src/**/*.{js,json,md}": [
       "prettier --write",
       "eslint --fix"
     ]
   }
->>>>>>> update_last_changes
 }
