--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,21 +11,30 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node for frontend build
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: ${{ secrets.NODE_VERSION || '20' }}
 
+      - name: Detect dirs
+        run: |
+          if [ -d Frontend ]; then echo "FE_DIR=Frontend" >> $GITHUB_ENV; else echo "FE_DIR=frontend" >> $GITHUB_ENV; fi
+          if [ -d Backend ]; then echo "BE_DIR=Backend" >> $GITHUB_ENV; else echo "BE_DIR=backend" >> $GITHUB_ENV; fi
+
       - name: Write frontend env
         run: |
-          cd frontend
-          printf "%s\n" "${{ secrets.FRONTEND_ENV }}" > .env
+          cd "${{ env.FE_DIR }}"
+          printf "%s\n" "${{ secrets.FRONTEND_ENV }}" > .env || true
 
       - name: Install & Build frontend
-        working-directory: ./frontend
+        working-directory: ./${{ env.FE_DIR }}
         run: |
           npm ci || npm install
-          npm run build
+          npm run build || npm run build:prod || echo "build script missing"
+
+      - name: Detect frontend output dir
+        run: |
+          if [ -d "${{ env.FE_DIR }}/dist" ]; then echo "FE_OUT=dist" >> $GITHUB_ENV; else echo "FE_OUT=build" >> $GITHUB_ENV; fi
 
       - name: Ensure dirs exist on server
         uses: appleboy/ssh-action@v1.0.3
@@ -45,7 +54,7 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
           port: ${{ secrets.SSH_PORT || 22 }}
-          source: "frontend/build/*"
+          source: "${{ env.FE_DIR }}/${{ env.FE_OUT }}/*"
           target: "/var/www/crm-frontend/"
 
       - name: Upload backend source
@@ -55,7 +64,7 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
           port: ${{ secrets.SSH_PORT || 22 }}
-          source: "backend/*"
+          source: "${{ env.BE_DIR }}/*"
           target: "/var/www/crm-backend/"
 
       - name: Write backend env
