--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -129,8 +129,16 @@ jobs:
           key: ${{ secrets.VPS_SSH_KEY }}
           passphrase: ${{ secrets.VPS_SSH_PASSPHRASE }}
           script: |
+            set -e
             cd /var/www/crm-backend
-            npm ci --omit=dev || npm install --omit=dev
-            npm run build || true
-            pm2 reload crm-backend || pm2 start npm --name crm-backend -- run start
+            HUSKY=0 npm ci --omit=dev || HUSKY=0 npm install --omit=dev
+            npx prisma generate || true
+            npx prisma db push || true
+            npm run seed || true
+            if npm run | grep -qE " start"; then
+              pm2 reload crm-backend || pm2 start npm --name crm-backend -- run start
+            else
+              pm2 delete crm-backend || true
+              pm2 start node --name crm-backend -- src/server.js
+            fi
             pm2 save
