--- a/Frontend/.gitignore
+++ b/Frontend/.gitignore
@@ -11,7 +11,11 @@ node_modules
 dist
 dist-ssr
 *.local
-
+.env
+.env.example
+.env.local
+.env.staging
+.env*.local
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -22,3 +26,4 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
