add telegram fresh

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,6 +1,7 @@
 DATABASE_URL=postgresql://postgres:1@localhost:5432/CRM_AMO_2_0
 #DATABASE_URL=mysql://admin_crm:yG2xH3rH9n@solar.hostdns.net.in:1500/crm_amo
-BOT_TOKEN=8414191246:AAEmM91M33RxNuDhx8sixyIxbfdkHeeV4Q0
+TELEGRAM_BOT_TOKEN=8414191246:AAEmM91M33RxNuDhx8sixyIxbfdkHeeV4Q0
+PUBLIC_BOT_NAME=gsse_assistant_bot
 JWT_SECRET=CRYPTO_SECRET_KEY
 JWT_EXPIRATION=1h
 REDIS_URL=redis://localhost:6379
