--- a/Backend/package.json
+++ b/Backend/package.json
@@ -34,7 +34,9 @@
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "path": "^0.12.7",
-    "prisma": "^6.16.3"
+    "prisma": "^6.16.3",
+    "telegraf": "^4.16.3",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "eslint": "^9.28.0",
