feat: Implement employee management features with CRUD operations
- Added backend controller for employee management including list, create, update, and delete functionalities.
- Introduced service layer for handling employee data operations with Prisma.
- Enhanced frontend components to support new employee fields and improved data handling.
- Updated employee modal to include new fields and validation.
- Integrated Telegram avatar fetching and saving functionality.
- Improved error handling and user feedback across employee-related components.

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -24,7 +24,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^6.16.3",
+    "@prisma/client": "^6.18.0",
+    "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.18",
@@ -34,7 +35,7 @@
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "path": "^0.12.7",
-    "prisma": "^6.16.3",
+    "prisma": "^6.18.0",
     "telegraf": "^4.16.3",
     "uuid": "^13.0.0"
   },
