--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -92,7 +92,7 @@ jobs:
           key: ${{ secrets.VPS_SSH_KEY }}
           passphrase: ${{ secrets.VPS_SSH_PASSPHRASE }}
           source: "frontend.tgz"
-          target: "/var/www/"
+          target: "/srv/project_test/"
           overwrite: true
 
       - name: Unpack frontend on server (atomic)
@@ -143,7 +143,7 @@ jobs:
           key: ${{ secrets.VPS_SSH_KEY }}
           passphrase: ${{ secrets.VPS_SSH_PASSPHRASE }}
           source: "backend.tgz"
-          target: "/var/www/"
+          target: "/srv/project_test/"
           overwrite: true
 
       - name: Unpack backend on server (atomic)
