--- a/Backend/package.json
+++ b/Backend/package.json
@@ -27,6 +27,7 @@
     "@prisma/client": "^6.18.0",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dayjs": "^1.11.18",
     "dotenv": "^16.5.0",
