--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,3 +1,3 @@
-DATABASE_URL=mysql://user:pass@localhost:3306/mydb
+DATABASE_URL=postgres://avnadmin:AVNS_qAeQkJ89pv1nOlzD10z@pg-316ab4a9-rainekeyboard.k.aivencloud.com:14726/defaultdb?sslmode=require
 JWT_SECRET=change-me
 PORT=3000
