Fix branch name typo in deploy-test.yml

--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -3,7 +3,7 @@ name: deploy-crm-test
 on:
   workflow_dispatch:
   push:
-    branches: [develop]
+    branches: [develope]
 
 concurrency:
   group: deploy-crm-test-${{ github.ref }}
