--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -21,6 +21,10 @@ TELEGRAM_BOT_TOKEN=
 PUBLIC_BOT_NAME=gsse_assistant_bot
 BOT_DISABLED=1
 
+# Optional shared test-gate (used by test nginx auth_request flow)
+TEST_GATE_PASSWORD=
+TEST_GATE_SECRET=
+TEST_GATE_COOKIE_TTL_DAYS=7
 
 
 
