--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -26,5 +26,11 @@ TEST_GATE_PASSWORD=
 TEST_GATE_SECRET=
 TEST_GATE_COOKIE_TTL_DAYS=7
 
+# Test-only default admin seed
+TEST_DEFAULT_ADMIN_ENABLED=false
+ADMIN_LOGIN=admin
+ADMIN_PASSWORD=123456
+ADMIN_NAME=Test Admin
+ADMIN_EMAIL=admin-test@example.com
 
 
